--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '3.3.0'
 	id 'java'
+	id 'org.jetbrains.kotlin.jvm' version '2.0.20'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -15,7 +16,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 test {
