--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -18,9 +18,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
 }
 
 test {
 	useJUnitPlatform()
+	if (System.properties['test.profile'] != 'integration') {
+		exclude '**/*ITest*'
+	}
 }
