--- a/.github/workflows/initial.yml
+++ b/.github/workflows/initial.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
+          cache: gradle 
 
       - name: Build Initial with Gradle
         working-directory: ./initial
